...
    <string name="task_editor_description">Description</string>
    <string name="task_editor_notes">Notes</string>
    <string name="task_editor_priority">Priority</string>
    <string name="task_editor_status">Status</string>
    <string name="task_status_todo">To do</string>
    <string name="task_status_in_progress">In progress</string>
    <string name="task_status_done">Done</string>
    <string name="task_editor_start_date">Start date</string>
    <string name="task_editor_due_date">Due date</string>
    <string name="task_editor_start_time">Start time</string>
    <string name="task_editor_due_time">Due time</string>
    <string name="task_editor_reminder">Reminder</string>
    <string name="task_editor_repeat">Repeat</string>
    <string name="task_editor_project">Project</string>
    <string name="task_editor_tags">Tags</string>
    <string name="task_editor_add_tag">Add tag</string>
    <string name="task_editor_tag_hint">Tag name</string>
    <string name="task_editor_estimate">Estimated (minutes)</string>
    <string name="task_editor_actual">Actual (minutes)</string>
...
